--- a/index.html
+++ b/index.html
@@ -128,14 +128,9 @@
 
         <ul class="social-list">
 
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://twitter.com/Christianjpark" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
@@ -252,6 +247,9 @@
                         <li>Created on-hand PN database from scratch.</li>
                         <li>Implemented Electronics component testing (documentation, data testing, calibration, PCB testing).</li>
                         <li>Measured PCB Data output in Excel.</li>
+                        <header>
+                            <h2 class="h3 article-title">Projects</h2>
+                          </header>
                     </ul>
                 </body>
                 </html>
