--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
           </p>
-          This website serves as my digital portfolio, showcasing my projects, skills, and experiences as I embark on the exciting path of launching my career. I'm on a mission to secure a job where I can apply my mathematical skills and coding prowess to make a meaningful impact. Join me in exploring my projects, learning more about my journey, and perhaps even collaborating on exciting opportunities. 
+          This website serves as my digital portfolio, showcasing my projects, skills, and experiences as I embark on the exciting path of launching my career. I'm on a mission to apply my mathematical skills and coding prowess to make a meaningful impact. Join me in exploring my projects, learning more about my journey, and perhaps even collaborating on exciting opportunities. 
           <p>
             
           </p>
