--- a/index.html
+++ b/index.html
@@ -1,92 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bouncing Ball Game</title>
     <style>
-        body { margin: 0; padding: 0; }
-        html { height: 100%; cursor: default; }
         body {
-            font-family: "Roboto", sans-serif; /* Default font */
-            width: 100%; height: 100%;
-            text-align: center;
-            display: table;
-            opacity: 1;
-            animation: fadein 3s forwards;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column; /* Center content vertically */
+            height: 100vh;
+            margin: 0;
         }
-        h2 {
-            font-weight: 300;
-            margin-bottom: 25px;
+        div {
+            margin-bottom: 20px; /* Add margin below the text */
         }
-        img {
-            width: 25%; /* Image width */
-            border: 0; /* For IE */
-            /* Aspect ratio of image, gives initial dimension to prevent text moving down once image is loaded */
-            /* When changing logo, change this also */
-            aspect-ratio: 125 / 50;
+        #game-container {
+            position: relative;
+            width: 400px;
+            height: 400px;
+            overflow: hidden;
+            border: 2px solid #333; /* Add border styling */
         }
-        #main {
-            vertical-align: middle;
-            display: table-cell;
-        }
-        /* Progress bar */
-        #progress {
-            width: 45%; /* Bar width */
-            margin: 0 auto;
-            border-radius: 10px; /* Roundness */
-            background-color: #a8a8a8; /* Background colour */
-            padding: 7px 5px;
-            /* border: 5px solid #a8a8a8; Border */
-        }
-        #fill {
-            padding: 2px 0;
-            background-color: #00b98b; /* Fill colour */
-            width: 35%; /* Bar percentage, change text below also */
-            border-radius: 25px; /* Roundness */
-            animation: proanimate 2s;
-        }
-        #barpercent h3 {
-            color: white; /* Bar percentage text colour */
-            margin: 0; padding: 0;
-            opacity: 1;
-            animation: fadein 3s forwards;
-        }
-
-        /* Fades in animation */
-        @keyframes fadein  {
-            from { opacity: 0; }
-        }
-        /* Animates bar on page load */
-        @keyframes proanimate {
-            from { width: 0%; }
-        }
-
-        @media screen and (max-width:600px) {
-            img {
-                width: 60%;
-            }
-            h1 {
-                font-size: 1.3em;
-            }
-            h2 {
-                margin: 1.1em;
-                font-size: 1.1em;
-            }
-            #progress {
-                width: 80%; /* Bar width */
-            }
+        #ball {
+            position: absolute;
+            width: 40px;
+            height: 40px;
+            background-color: #3498db;
+            border-radius: 50%;
         }
     </style>
-    <title>Coming Soon</title>
+    
+    
 </head>
 <body>
-    <div id="main">
-        <img src="logo.png" alt="Logo Image">
-        <h1>Christian Park</h1>
-        <h2>Currently redesigning my website. Will be ready shortly! </h2>
-        <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
+    <div>
+        <h2>look at this ball you idiot. It changes colors.</h2>
     </div>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+
+    <div id="game-container">
+        <div id="ball"></div>
+    </div>
+
+    <!-- ... (HTML code remains unchanged) -->
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const gameContainer = document.getElementById('game-container');
+        const ball = document.getElementById('ball');
+
+        let ballX = 200; // Initial X position
+        let ballY = 200; // Initial Y position
+        let ballSpeedX = 5; // Initial X speed
+        let ballSpeedY = 3; // Initial Y speed
+
+        function getRandomColor() {
+            const letters = '0123456789ABCDEF';
+            let color = '#';
+            for (let i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
+
+        function updateBallPosition() {
+            ballX += ballSpeedX;
+            ballY += ballSpeedY;
+
+            // Bounce off the walls
+            if (ballX < 0 || ballX + ball.offsetWidth > gameContainer.offsetWidth) {
+                ballSpeedX = -ballSpeedX;
+            }
+            if (ballY < 0 || ballY + ball.offsetHeight > gameContainer.offsetHeight) {
+                ballSpeedY = -ballSpeedY;
+            }
+
+            // Update ball position and color
+            ball.style.left = ballX + 'px';
+            ball.style.top = ballY + 'px';
+
+            // Change ball color every 500 milliseconds
+            if (Date.now() % 1000 < 16) {
+                ball.style.backgroundColor = getRandomColor();
+            }
+        }
+
+        function handleMouseClick(event) {
+            // Move the ball to the clicked position
+            ballX = event.clientX - gameContainer.offsetLeft - ball.offsetWidth / 2;
+            ballY = event.clientY - gameContainer.offsetTop - ball.offsetHeight / 2;
+        }
+
+        // Set up event listeners
+        gameContainer.addEventListener('click', handleMouseClick);
+
+        // Game loop
+        function gameLoop() {
+            updateBallPosition();
+            requestAnimationFrame(gameLoop);
+        }
+
+        // Start the game loop
+        gameLoop();
+    });
+</script>
+
 </body>
 </html>
