--- a/index.html
+++ b/index.html
@@ -85,10 +85,14 @@
             width: 150px;
             height: auto;
             position: absolute;
-            left: 20px;
-            bottom: 20px;
+            top: 50%;
+            left: 60%;
+            transform: translate(-50%, -50%);
             z-index: 2;
             transition: opacity 0.3s;
+        }
+        .link-gif.hidden {
+            opacity: 0;
         }
         .running-gif {
             width: 150px;
@@ -105,20 +109,32 @@
         }
         #datetime {
             font-size: 12px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             font-weight: 500;
-	    text-align: left;
+            text-align: left;
+        }
+        #filename {
+            width: 50%;
+            padding: 10px;
+            font-size: 16px;
+            font-family: 'Press Start 2P', cursive;
+            margin-bottom: 10px;
+            background-color: #333;
+            border: 1px solid #ccc;
+            color: white;
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <div id="datetime"></div>
+    <input type="text" id="filename" placeholder="Enter file name">
     <div class="container">
         <div class="template-selector">
             <button class="template-button" onclick="loadTemplate('lecture')">Lecture Notes</button>
-            <button class="template-button" onclick="loadTemplate('todo')">To-Do List</button>
+            <button class="template-button" onclick="loadTemplate('todo')">To-Do</button>
             <button class="template-button" onclick="loadTemplate('quote')">Code</button>
-        </div>
+       </div>
         <textarea id="note" placeholder="Get cookin right here..." oninput="startAnimation()"></textarea>
         <button class="button" onclick="downloadNote()">Download Note</button>
         <img id="link-gif" class="link-gif" src="link-walk.gif" alt="Link Walking">
@@ -128,48 +144,47 @@
     <script>
         var noteTextarea = document.getElementById('note');
         var linkGif = document.getElementById('link-gif');
-        varrunningGif = document.getElementById('running-gif');
+        var runningGif = document.getElementById('running-gif');
         var datetimeDisplay = document.getElementById('datetime');
 
+        var templates = {
+            lecture: 'Lecture Notes\n\nCourse: \nDate: \n\nTopics Covered:\n- \n- \n- \n\nKey Points:\n- \n- \n- \n\nQuestions:\n- \n- \n- ',
+            todo: 'To-Do List\n\n1. \n2. \n3. \n\nPriority Tasks:\n1. \n2. \n3. ',
+            quote: '# Code goes here ...'
+        };
+
         function loadTemplate(templateType) {
-            let templateContent = '';
-
-            switch (templateType) {
-                case 'lecture':
-                    templateContent = 'Lecture Notes\n\nCourse: \nDate: \n\nTopics Covered:\n- \n- \n- \n\nKey Points:\n- \n- \n- \n\nQuestions:\n- \n- \n- ';
-                    break;
-                case 'todo':
-                    templateContent = 'To-Do List\n\n1. \n2. \n3. \n\nPriority Tasks:\n1. \n2. \n3. ';
-                    break;
-                case 'quote':
-                    templateContent = '"Code goes here..."';
-                    break;
-                default:
-                    templateContent = '';
-            }
-
-            noteTextarea.value = templateContent;
+            // Save current content
+            localStorage.setItem('currentNote', noteTextarea.value);
+            localStorage.setItem('currentTemplate', templateType);
+            
+            // Load new content
+            noteTextarea.value = localStorage.getItem(templateType) || templates[templateType];
         }
 
         function startAnimation() {
             var noteContent = noteTextarea.value.trim();
+            var currentTemplate = localStorage.getItem('currentTemplate');
 
             if (noteContent.length > 0) {
-                linkGif.style.opacity = '0';
+                linkGif.classList.add('hidden');
                 runningGif.classList.add('active');
             } else {
-                linkGif.style.opacity = '1';
+                linkGif.classList.remove('hidden');
                 runningGif.classList.remove('active');
             }
+
+            localStorage.setItem(currentTemplate, noteTextarea.value);
         }
 
         function downloadNote() {
             var noteContent = noteTextarea.value;
+            var filename = document.getElementById('filename').value || 'note';
             var blob = new Blob([noteContent], { type: 'text/plain' });
             var url = URL.createObjectURL(blob);
             var a = document.createElement('a');
-           a.href = url;
-            a.download = 'note.txt';
+            a.href = url;
+            a.download = filename + '.txt';
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
@@ -184,11 +199,17 @@
             var year = now.getFullYear();
             var month = (now.getMonth() + 1).toString().padStart(2, '0');
             var day = now.getDate().toString().padStart(2, '0');
-            datetimeDisplay.innerHTML = `${hours}:${minutes}:${seconds} ${year}/${month}/${day} `;
+            datetimeDisplay.innerHTML = `${hours}:${minutes}:${seconds} ${year}/${month}/${day}`;
         }
-	setInterval(updateDatetime, 1000);
-        updateDatetime();
 
+        function initialize() {
+            var currentTemplate = localStorage.getItem('currentTemplate') || 'lecture';
+            loadTemplate(currentTemplate);
+        }
+
+        setInterval(updateDatetime, 1000);
+        updateDatetime();
+        initialize();
     </script>
 </body>
 </html>
