--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         var datetimeDisplay = document.getElementById('datetime');
 
         var templates = {
-            lecture: 'Name: Christian Park\n\nCourse: \nDate: \n\nTopics Covered:\n- \n- \n- \n\nKey Points:\n- \n- \n- \n\nQuestions:\n- \n- \n- ',
+            lecture: 'Name: Christian Park...\nCourse: \nDate: \n\nTopics Covered:\n- \n- \n- \n\nKey Points:\n- \n- \n- \n\nQuestions:\n- \n- \n- ',
             todo: 'To-Do List\n\n1. \n2. \n3. \n\nPriority Tasks:\n1. \n2. \n3. ',
             quote: '# Code goes here ...'
         };
